# crypto-dashboard-rust

./: .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  db.json  index.html  render.yaml  styles.css
api/: bootstrap-refresh.js
src/: main.rs
static/: app.js  db.json  index.html
